RESOLVED FIXED187144
Focus ring color does not honor dark mode or system accent color
https://bugs.webkit.org/show_bug.cgi?id=187144
Summary Focus ring color does not honor dark mode or system accent color
Timothy Hatcher
Reported 2018-06-28 10:40:17 PDT
The focus ring color is always light blue. It should match the system. <rdar://problem/41105081>
Attachments
Patch (10.67 KB, patch)
2018-06-28 10:42 PDT, Timothy Hatcher
no flags
Timothy Hatcher
Comment 1 2018-06-28 10:40:35 PDT
Timothy Hatcher
Comment 2 2018-06-28 10:42:36 PDT
WebKit Commit Bot
Comment 3 2018-06-28 11:51:14 PDT
Comment on attachment 343816 [details] Patch Clearing flags on attachment: 343816 Committed r233315: <https://trac.webkit.org/changeset/233315>
WebKit Commit Bot
Comment 4 2018-06-28 11:51:16 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.